# Projeto_2_Perspectiva_Ciencia_Dados

./: .gitignore  Projeto_2.ipynb  README.md  main.py  pyproject.toml
.ipynb_checkpoints/: README-checkpoint.md
1.Dados/: README.md
2.ConformalPrediction/: conformal_prediction.ipynb
2.Modelos_Previsão_Visitas/: README.md  log_rf.ipynb  tabicl (2).ipynb
3.Apresentacao_Final/: README.md
3.Shap/: shap.ipynb
4.Imagens/: README.md
4.Modelos_Previsão_Visitas/: tabicl (2).ipynb  tabicl.ipynb
