[project]
name = "projeto-2-perspectiva-ciencia-dados"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jupyterlab>=4.5.8",
    "matplotlib>=3.10.9",
    "notebook>=7.5.7",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "shap>=0.49.1",
]
