[project]
name = "projeto-2-perspectiva-ciencia-dados"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jupyterlab>=4.5.8",
    "lime>=0.2.0.1",
    "matplotlib>=3.10.9",
    "notebook>=7.5.7",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "shap>=0.49.1",
    "tabicl>=2.1.1",
    "tensorflow>=2.21.0",
    "torch>=2.10.0",
    "xgboost>=3.2.0",
]
